--- a/app/templates/analysis_LOCAL_1263.html
+++ b/app/templates/analysis_LOCAL_1263.html
@@ -218,7 +218,7 @@
 					{% for item in items %}
 					<div class="container-items">
 						<img class="item-image lozad" data-src={{ item['image-alt'] }} height="80" width="80" draggable="true"
-							ondragstart="drag(event)" id={{ item['item-id`'] }} credit="u/ambieobambie">
+							ondragstart="drag(event)" id={{ item['name'] }} credit="u/ambieobambie">
 						<figcaption>
 							<span>{{ item['name'] }}</span>
 						</figcaption>
@@ -242,7 +242,7 @@
 					{% for addon in addons %}
 					<div class="container-addons">
 						<img class="addon-image lozad" data-src={{ addon['addon-image-alt'] }} height="80" width="80" draggable="true"
-							ondragstart="drag(event)" id={{ addon['addon-id'] }} credit="u/ambieobambie">
+							ondragstart="drag(event)" id={{ addon['addon-name'] }} credit="u/ambieobambie">
 						<figcaption>
 							<span>{{ addon['addon-name'] }}</span>
 						</figcaption>
