--- a/app/static/analysis.css
+++ b/app/static/analysis.css
@@ -155,7 +155,7 @@
 .tempSlot {
 	visibility: hidden;
 	max-height: 0;
-	transition: max-height 1s, visibility 1s;
+	transition: max-height .3s, visibility .5s;
 }
 
 /*.tempSlot > .addonSlot{
@@ -171,14 +171,14 @@
 }*/
 
 .tempSlot * {
-	transition: visibility .5s, opacity 1s ease;
+	transition: visibility .2s, opacity .5s ease;
 	visibility: hidden;
 	opacity: 0;
 }
 
 .fade {
 	visibility: visible;
-	max-height: 150px;
+	max-height: 500px;
 }
 
 .fade * {
