item overlay class

--- a/app/templates/analysis.html
+++ b/app/templates/analysis.html
@@ -265,7 +265,7 @@
 								<figcaption>
 									<span>{{ item['name'] }}</span>
 								</figcaption>
-								<div class="overlay {{ 'overlayAddon' + ''.join(rarity.split()) }}">
+								<div class="overlay {{ 'overlayItem' + ''.join(rarity.split()) }}">
 									<div class="overlay-heading">
 										<span style="font-size: 16px; font-weight: 600;">{{ item['name'] }}</span>
 										<span style="font-size: 13px;">{{ rarity }}</span>
