--- a/app/static/analysis.css
+++ b/app/static/analysis.css
@@ -295,7 +295,7 @@
 	justify-content: space-between;
 	margin-top: 100px;
 }
-.subsubTabContent, .AddonsContent, .ItemsContent {
+.subsubTabContent, .AddonsContent, .addonsContent, .ItemsContent {
 	display: flex;
 	/* flex-wrap: wrap; */
 	flex-direction: column;
